--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint . --report-unused-disable-directives",
-    "test": "vitest --run supports.test.ts --allowOnly",
+    "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p tsconfig.browser.json"
   },
@@ -77,7 +77,6 @@
     "@luxass/eslint-config": "^4.2.6",
     "@types/node": "^18.19.4",
     "eslint": "^8.56.0",
-    "eslint-plugin-format": "^0.1.0",
     "jsdom": "^24.0.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3",
