--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint . --report-unused-disable-directives",
-    "test": "vitest --run index.test.ts --allowOnly",
+    "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p tsconfig.browser.json"
   },
