--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://github.com/luxass/farver",
   "repository": {
     "type": "git",
-    "url": "https://github.com/luxass/farver"
+    "url": "git+https://github.com/luxass/farver.git"
   },
   "bugs": {
     "url": "https://github.com/luxass/farver/issues"
