--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,3 +40,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
+
+      - name: Publish to JSR
+        run: npx jsr publish
