--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,27 +17,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v4.1.7
 
-      - name: Setup pnpm
+      - name: setup pnpm
         uses: pnpm/action-setup@v4.0.0
 
-      - name: Setup node
+      - name: setup node
         uses: actions/setup-node@v4.0.3
         with:
           node-version: lts/*
 
-      - name: Install dependencies
+      - name: install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
+      - name: build
         run: pnpm build
 
-      - name: Lint
+      - name: lint
         run: pnpm lint
 
-      - name: Typecheck
+      - name: typecheck
         run: pnpm typecheck
 
   test:
@@ -53,21 +53,22 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/checkout@v4.1.7
+      - name: checkout
+        uses: actions/checkout@v4.1.7
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: setup pnpm
+        uses: pnpm/action-setup@v4.0.0
 
-      - name: Set node ${{ matrix.node }}
+      - name: setup node v${{ matrix.node }}
         uses: actions/setup-node@v4.0.3
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install
+      - name: install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
+      - name: build
         run: pnpm build
 
-      - name: Test
+      - name: test
         run: pnpm test
