feat: add `fast` export
This new fast export, doesn't support chained calls. Therefor its really fast 🏎️

--- a/package.json
+++ b/package.json
@@ -41,6 +41,16 @@
         "default": "./dist/index.cjs"
       }
     },
+    "./fast": {
+      "import": {
+        "types": "./dist/fast.d.ts",
+        "default": "./dist/fast.mjs"
+      },
+      "require": {
+        "types": "./dist/fast.d.cts",
+        "default": "./dist/fast.cjs"
+      }
+    },
     "./supports": {
       "import": {
         "types": "./dist/supports.d.ts",
