Add support for gradients
Fixes #49

Add support for gradients with a new API.

* **New Gradient API**: Add `src/gradients.ts` implementing the `gradient` function and built-in gradients (`mijd`, `vice`, `fruit`, `retro`, `summer`, `rainbow`, `pastel`).
* **Exports**: Update `package.json` and `jsr.json` to include the new export `farver/gradients`.
* **Build Configuration**: Modify `tsup.config.ts` to add `./src/gradients.ts` to the `entry` array.
* **Tests**: Add `test/gradients.test.ts` with tests for the `gradient` function and the built-in gradients.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/luxass/farver/issues/49?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -71,6 +71,16 @@
         "default": "./dist/utils.cjs"
       }
     },
+    "./gradients": {
+      "import": {
+        "types": "./dist/gradients.d.ts",
+        "default": "./dist/gradients.mjs"
+      },
+      "require": {
+        "types": "./dist/gradients.d.cts",
+        "default": "./dist/gradients.cjs"
+      }
+    },
     "./package.json": "./package.json"
   },
   "main": "dist/index.cjs",
