refactor: reorganize exports in supports.ts and update tsconfig
- Updated the export structure in src/supports.ts for better clarity and organization.
- Added an include section in tsconfig.json to specify the source directory.
- Introduced a new tsdown.config.ts file for streamlined build configuration with TypeScript.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
+  "include": [
+    "src"
+  ],
   "exclude": ["node_modules", "dist"]
 }
