--- a/package.json
+++ b/package.json
@@ -80,22 +80,23 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "lint": "eslint .",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "termenv": "^0.4.2"
+    "termenv": "^0.5.0"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^5.1.0",
     "@types/node": "^22.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
-    "tsup": "^8.5.0",
+    "publint": "^0.3.12",
+    "tsdown": "^0.12.9",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
