--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [20, 18]
+        node: [20, 22, lts/*]
         os:
           - ubuntu-latest
           - macos-latest
