--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
