--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "deno.enablePaths": [
+    "./test-deno",
+    "./deno.json",
+    "./deno.lock"
+  ]
 }
