test: add Bun testing configuration and tests
- Introduced a new job in the CI workflow for running tests with Bun.
- Added `test-bun` directory with test cases for color conversion utilities.
- Updated `deno.json` to include `test-bun/**` in the linting process.
- Added Bun types to `package.json` and updated lock file accordingly.
- Modified `tsconfig.json` to include Bun types.
- Updated Vitest configuration to exclude `test-bun` tests from default exclusions.

--- a/deno.json
+++ b/deno.json
@@ -45,6 +45,7 @@
       "scripts/**",
       "test/**",
       "test-deno/**",
+      "test-bun/**",
       "tsconfig.json",
       "playground.ts",
       "vitest.config.ts",
