--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,3 +93,27 @@ jobs:
 
       - name: run deno test
         run: deno test --config=deno.json --allow-env
+
+  bun:
+    name: test-bun
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # Bun Setup doesn't work with the wildcard cersion atm,
+        # so hardcoding them for now.
+        bun-version: [1.0.36, 1.1.45, 1.2.18]
+
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - name: setup bun ${{ matrix.bun-version }}
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2.0.2
+        with:
+          bun-version: ${{ matrix.bun-version }}
+          no-cache: true
+
+      - name: run bun test
+        run: bun test test-bun/
