--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "devDependencies": {
     "@luxass/eslint-config": "^5.1.0",
+    "@types/bun": "^1.2.18",
     "@types/node": "^22.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
