--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,9 @@ jobs:
       - name: install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: setup playwright
+        run: pnpm exec playwright install
+
       - name: build
         run: pnpm build
 
