--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,9 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
 
+      - name: install deno dependencies
+        run: deno install
+
       - name: run deno test
         run: deno test --config=deno.json --allow-env
 
@@ -117,6 +120,9 @@ jobs:
         with:
           bun-version: ${{ matrix.bun-version }}
           no-cache: true
+
+      - name: install
+        run: bun install --frozen-lockfile
 
       - name: run bun test
         run: bun test test-bun/
