--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
           no-cache: true
 
       - name: install
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: run bun test
         run: bun test test-bun/
