--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       - name: setup playwright
         run: pnpm exec playwright install
 
+      - name: print colorterm
+        run: echo $COLORTERM
+
       - name: build
         run: pnpm build
 
