ci: remove 22 from node matrix Currently the lts/* is using node 22, so by also having 22 in the list we are essentially running tests on node 22 twice.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [20, 22, lts/*]
+        node: [20, lts/*]
         os:
           - ubuntu-latest
           - macos-latest
