--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@luxass/farver",
-  "version": "0.4.2",
+  "version": "1.0.0-beta.1",
   "exports": {
     ".": "./src/index.ts",
     "./supports": "./src/supports.ts",
