--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farver",
-  "version": "0.4.2",
+  "version": "1.0.0-beta.1",
   "description": "A tiny color library",
   "type": "module",
   "author": {
