--- a/deno.json
+++ b/deno.json
@@ -3,9 +3,7 @@
   "version": "1.0.0-beta.1",
   "exports": {
     ".": "./src/index.ts",
-    "./supports": "./src/supports.ts",
-    "./utils": "./src/utils.ts",
-    "./fast": "./src/fast.ts"
+    "./utils": "./src/utils.ts"
   },
   "lint": {
     "rules": {
